--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,6 +3,8 @@ const personalImageAlt = "Miguel Ángel"
 import Badge from "@/components/Badge.astro"
 import LinkedInIcon from "@/components/icons/LinkedIn.astro"
 import MailIcon from "@/components/icons/Mail.astro"
+import GitHubIcon from "@/components/icons/GitHub.astro"
+import InstagramIcon from "@/components/icons/Instagram.astro"
 import SocialPill from "@/components/SocialPill.astro"
 ---
 
@@ -10,7 +12,7 @@ import SocialPill from "@/components/SocialPill.astro"
   <div class="flex gap-4 mb-4">
     <img
       class="rounded-full shadow-lg size-16"
-      src="/midudev.webp"
+      src="assets/foto_marcelo.jpg"
       alt={personalImageAlt}
     />
     <a
@@ -25,24 +27,33 @@ import SocialPill from "@/components/SocialPill.astro"
   <h1
     class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
   >
-    Hey, soy midudev
+   Hola Soy, Marcelo
   </h1>
   <p
     class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
   >
-    +15 años de experiencia. <strong
-      >Ingeniero de Software y Creador de Contenido sobre Programación</strong
-    > de Barcelona, España 🇪🇸. Especializado en el desarrollo de aplicaciones web
-    únicas.
+  Más de <strong>1 año de experiencia</strong>. 
+  Estudiante de <strong>Ingeniería de Sistemas</strong> y practicante en 
+  <strong>desarrollo web y análisis de datos</strong>. 
+  Enfocado en <strong>desarrollo front-end</strong>, con conocimientos sólidos en 
+  <strong>back-end y bases de datos</strong>.
   </p>
   <nav class="flex flex-wrap gap-4 mt-8">
-    <SocialPill href="mailto:miduga@gmail.com">
+    <SocialPill href="mailto:marceloportilla2720@gmail.com">
       <MailIcon class="size-4" />
       Contáctame
     </SocialPill>
-    <SocialPill href="https://linkedin.com/in/midudev">
+    <SocialPill href="https://www.linkedin.com/in/angello-marcelo-portilla-aviles-a007bb309">
       <LinkedInIcon class="size-4" />
       LinkedIn
+    </SocialPill>
+    <SocialPill href="https://github.com/AvilesTeam">
+      <GitHubIcon class="size-4" />
+      GitHub
+    </SocialPill>
+    <SocialPill href="https://www.instagram.com/portilla.adda/">
+      <InstagramIcon class="size-4" />
+      Instagram
     </SocialPill>
   </nav>
 </div>
