--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,5 @@
 ---
-const personalImageAlt = "Miguel Ángel"
+const personalImageAlt = "Marcelo Portilla"
 import Badge from "@/components/Badge.astro"
 import LinkedInIcon from "@/components/icons/LinkedIn.astro"
 import MailIcon from "@/components/icons/Mail.astro"
@@ -12,7 +12,7 @@ import SocialPill from "@/components/SocialPill.astro"
   <div class="flex gap-4 mb-4">
     <img
       class="rounded-full shadow-lg size-16"
-      src="public/assets/foto_marcelo.jpg"
+      src="public/foto_marcelo.jpg"
       alt={personalImageAlt}
     />
     <a
