--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -36,7 +36,7 @@ const PROJECTS = [
       "Aplicación web para la gestión académica de estudiantes, facilitando el acceso a calificaciones, horarios y recursos educativos. Desarrollada con Python y JavaScript, con un enfoque en usabilidad y eficiencia.",
     link: "https://dashboard-estudiante.onrender.com/",
     github: "https://github.com/AvilesTeam/dashboard-estudiante",
-    image: "public/dasboard_estudent.jpeg",
+    image: "/projects/dasboard_estudent.jpeg",
     tags: [
       TAGS.PYTHON,
       TAGS.JAVASCRIPT,
@@ -47,7 +47,7 @@ const PROJECTS = [
     description:
       "Plataforma web diseñada para la gestión eficiente de citas en barberías. Permite a los usuarios reservar horarios, gestionar perfiles y recibir notificaciones. Construida con Typescript, Angular y Ionic, enfocada en una experiencia de usuario intuitiva y moderna.",
     link: "https://github.com/AvilesTeam/barbershop-app",
-    image: "public/foto_loginbarber.PNG",
+    image: "/projects/foto_loginbarber.PNG",
     tags: [
       TAGS.TYPESCRIPT,
       TAGS.ANGULAR,
