--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,6 +5,7 @@ import LinkedInIcon from "@/components/icons/LinkedIn.astro"
 import MailIcon from "@/components/icons/Mail.astro"
 import GitHubIcon from "@/components/icons/GitHub.astro"
 import InstagramIcon from "@/components/icons/Instagram.astro"
+import DownloadIcon from "@/components/icons/Download.astro"
 import SocialPill from "@/components/SocialPill.astro"
 ---
 
@@ -55,5 +56,8 @@ import SocialPill from "@/components/SocialPill.astro"
       <InstagramIcon class="size-4" />
       Instagram
     </SocialPill>
-  </nav>
+    <SocialPill href="/CV.pdf" download>
+      <DownloadIcon class="size-4" />
+      Descargar CV
+    </SocialPill>
 </div>
