--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,8 +13,8 @@ import TitleSection from "@/components/TitleSection.astro"
 ---
 
 <Layout
-  title="Porfolio de midudev - Desarrollador y Programador Web con 15 años de experiencia"
-  description="Contrata a midudev para crear tu aplicación web o móvil. Desarrollador Web y Creador de Contenido. Especializado en crear aplicaciones únicas."
+  title="Porfolio de marceloportilla.dev - Desarrollador Web y analista de datos"
+  description="Contrata a Marcelo Portilla, un desarrollador web y analista de datos con experiencia en front-end y back-end. Explora su portafolio de proyectos y habilidades técnicas."
 >
   <main class="px-4">
     <SectionContainer class="py-16 md:py-36">
