--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -2,11 +2,11 @@
 import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCE = [
   {
-    date: "Actualmente...",
-    title: "Practicante de Análisis de Datos",
-    company: "Gilat Peru",
+    date: "Agosto 2024 – noviembre 2024",
+    title: "Asistente en Gestión de Bases de Datos",
+    company: "Superintendencia Nacional de Administración Tributaria - SUNAT",
     description:
-  "Actualización de bases de datos, automatización de la gestión de información y revisión documentaria vinculada al mantenimiento de la red. Coordinación con contratistas y áreas internas para garantizar la correcta operación de redes regionales."
+  "Automatización de reportes con Power BI y macros de Excel, limpieza de datos en registros historicos,creacion de dashboards dinamicos con Power BI."
   },
   {
     date: "Octubre 2025 – Diciembre 2025",
