edit experienc fix

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,7 +6,7 @@ const EXPERIENCE = [
     title: "Asistente en Gestión de Bases de Datos",
     company: "Superintendencia Nacional de Administración Tributaria - SUNAT",
     description:
-  "Automatización de reportes con Power BI y macros de Excel, limpieza de datos en registros historicos,creacion de dashboards dinamicos con Power BI."
+  "Automaticé reportes con Power BI y Excel, reduciendo el tiempo de preparación en 35 %, mejoré la calidad de datos tributarios en 20 % mediante limpieza y corrección de inconsistencias, y desarrollé dashboards dinámicos que agilizaron la consulta de información en 40 %."
   },
   {
     date: "Octubre 2025 – Diciembre 2025",
